--- a/1.RateUs/rateUs/package.json
+++ b/1.RateUs/rateUs/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@tabler/icons-react": "^2.47.0",
     "autoprefixer": "^10.4.17",
+    "canvas-confetti": "^1.9.2",
     "framer-motion": "^11.0.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
